// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoteButtonElement must match the snapshot with default Props 1`] = `
<ButtonStyle
  aria-label="foo"
  as="VoteButtonStyle"
  color="red"
  id="vote_button_element"
  rotate={0}
>
  <svg
    icon="thumbs-up"
    lib="@fortawesome/react-fontawesome"
    prefix="far"
  />
</ButtonStyle>
`;

exports[`VoteButtonElement must return the diff between snapshot when proposal is qualified or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <ButtonStyle
    aria-label="foo"
-   as="UnvoteButtonStyle"
+   as="VoteButtonStyle"
    color="red"
    id="vote_button_element"
    rotate={0}
  >
    <svg
`;

exports[`VoteButtonElement must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    aria-label="foo"
    as="VoteButtonStyle"
    color="red"
    id="vote_button_element"
    rotate={0}
-   tabIndex="-1"
+   tabIndex="0"
  >
    <svg
      icon="thumbs-up"
      lib="@fortawesome/react-fontawesome"
      prefix="far"
`;
